<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".ui.air_tickets_ui.AirTicketsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_tickets"
                android:textSize="22sp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_margin="20dp"
                android:textColor="@color/air_tickets_title_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/searchContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp"
                app:cardBackgroundColor="@color/grey3"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@id/titleText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    app:cardCornerRadius="16dp"
                    app:cardBackgroundColor="@color/grey4">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/searchBtnContainer"
                            android:layout_width="44dp"
                            android:layout_height="44dp"
                            app:cardBackgroundColor="@android:color/transparent"
                            app:cardElevation="0dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerInParent="true"
                            app:cardCornerRadius="6dp"
                            android:focusable="true"
                            android:clickable="true"
                            android:foreground="?attr/selectableItemBackground">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="8dp"
                                android:src="@drawable/ic_search"
                                android:contentDescription="@string/search" />

                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:id="@+id/tvFrom"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:hint="@string/hint_from"
                            android:background="@null"
                            android:textColor="@color/white"
                            android:textColorHint="@color/grey6"
                            android:maxLines="1"
                            android:gravity="start|center"
                            android:layout_marginEnd="10dp"
                            android:layout_toEndOf="@id/searchBtnContainer"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"/>

                        <View
                            android:id="@+id/viewLine"
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:background="@color/grey5"
                            android:layout_marginEnd="10dp"
                            android:layout_below="@id/tvFrom"
                            android:layout_toEndOf="@id/searchBtnContainer"
                            android:layout_alignParentEnd="true"/>

                        <TextView
                            android:id="@+id/tvTo"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:hint="@string/hint_to"
                            android:background="@null"
                            android:textColor="@color/white"
                            android:textColorHint="@color/grey6"
                            android:maxLines="1"
                            android:gravity="start|center"
                            android:layout_marginEnd="10dp"
                            android:layout_below="@id/viewLine"
                            android:layout_toEndOf="@id/searchBtnContainer"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentEnd="true"/>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/musicText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/musically"
                android:textSize="22sp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="@color/air_tickets_title_color"
                app:layout_constraintTop_toBottomOf="@id/searchContainer"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvOffers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/rv_offer_item"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/musicText"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSeeAll"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@drawable/btn_bc_grey"
                android:text="@string/seeAllPlace"
                android:layout_margin="20dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="italic"
                app:layout_constraintTop_toBottomOf="@id/rvOffers"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>