<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".ui.search_selected_country_ui.SearchSelectedCountryFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/searchContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="16dp"
                app:cardBackgroundColor="@color/grey3"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="96dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/btnBackContainer"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        app:cardBackgroundColor="@android:color/transparent"
                        app:cardElevation="0dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        app:cardCornerRadius="6dp"
                        android:focusable="true"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="8dp"
                            android:src="@drawable/ic_arrow_left"
                            android:contentDescription="@string/search"
                            android:layout_alignParentStart="true"
                            android:layout_centerInParent="true"/>

                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_toEndOf="@id/btnBackContainer">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_marginEnd="20dp">

                            <EditText
                                android:id="@+id/tvFrom"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/hint_from"
                                android:background="@null"
                                android:textColor="@color/white"
                                android:textColorHint="@color/grey6"
                                android:maxLines="1"
                                android:inputType="text"
                                android:autofillHints="" />

                            <ImageView
                                android:id="@+id/btnChange"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_change"
                                android:layout_gravity="center|end"
                                android:visibility="invisible"
                                android:contentDescription="@string/image"/>

                        </FrameLayout>

                        <View
                            android:id="@+id/viewLine"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/grey5"
                            android:layout_marginEnd="20dp"/>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_marginEnd="20dp">

                            <EditText
                                android:id="@+id/tvTo"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/hint_to"
                                android:background="@null"
                                android:textColor="@color/white"
                                android:textColorHint="@color/grey6"
                                android:maxLines="1"
                                android:inputType="text"
                                android:autofillHints="" />

                            <ImageView
                                android:id="@+id/btnToClearText"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_clear"
                                android:layout_gravity="center|end"
                                android:visibility="invisible"
                                android:contentDescription="@string/image"/>

                        </FrameLayout>

                    </LinearLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>
            
            <HorizontalScrollView
                android:id="@+id/scrollContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/searchContainer">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/tvBackContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="20dp"
                        app:cardBackgroundColor="@color/grey3"
                        android:focusable="true"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical">

                            <ImageView
                                android:id="@+id/imgChipsAdd"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_marginStart="10dp"
                                android:src="@drawable/ic_add"
                                android:padding="2dp"
                                android:contentDescription="@string/image"/>

                            <TextView
                                android:id="@+id/tvBack"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:gravity="center"
                                android:text="@string/back"
                                android:textColor="@color/white"
                                android:textSize="14sp"
                                android:textStyle="italic"
                                android:layout_marginHorizontal="10dp"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/tvDepartureDateContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="20dp"
                        app:cardBackgroundColor="@color/grey3"
                        android:layout_marginStart="10dp"
                        android:focusable="true"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground">

                        <TextView
                            android:id="@+id/tvDepartureDate"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:gravity="center"
                            android:text="@string/back"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:paddingHorizontal="10dp"
                            android:textStyle="italic"
                            android:background="@drawable/chips_bc" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/tvClassContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="20dp"
                        app:cardBackgroundColor="@color/grey3"
                        android:layout_marginStart="10dp"
                        android:focusable="true"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground">

                        <TextView
                            android:id="@+id/tvClass"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:gravity="center"
                            android:text="@string/back"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:paddingHorizontal="10dp"
                            android:background="@drawable/chips_bc"
                            android:drawablePadding="10dp"
                            android:textStyle="italic"
                            app:drawableStartCompat="@drawable/ic_user_class" />

                    </androidx.cardview.widget.CardView>

                    <FrameLayout
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/chips_bc">

                        <View
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_filter"/>

                    </FrameLayout>

                </LinearLayout>

            </HorizontalScrollView>

            <androidx.cardview.widget.CardView
                android:id="@+id/ticketsOffersContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp"
                app:cardBackgroundColor="@color/grey1"
                android:layout_margin="20dp"
                app:layout_constraintTop_toBottomOf="@id/scrollContainer">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/directFlights"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="10dp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvDirectFlights"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        tools:listitem="@layout/rv_direct_flights"
                        tools:itemCount="3"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
                    
                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:text="@string/showAll"
                        android:textSize="16sp"
                        android:layout_margin="10dp"
                        android:textAllCaps="false"
                        style="?android:attr/borderlessButtonStyle"
                        android:background="@color/grey1"
                        android:textColor="@color/blue"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSeeAllTickets"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:text="@string/seeAllTickets"
                android:textSize="16sp"
                android:layout_margin="20dp"
                android:textAllCaps="false"
                android:textStyle="normal|italic"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/btn_bc_blue"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/ticketsOffersContainer"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="50dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/grey2"
                app:layout_constraintTop_toBottomOf="@id/btnSeeAllTickets"
                app:layout_constraintBottom_toBottomOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="10dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_notify"
                        android:contentDescription="@string/image"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/subscribeToPrice"
                        android:textStyle="normal"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:layout_marginHorizontal="10dp"/>

                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:thumbTint="@color/white"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>