<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_bc"
    tools:context=".ui.search_ui.SearchFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/viewTop"
            android:layout_width="50dp"
            android:layout_height="6dp"
            android:background="@drawable/btn_bc_grey"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/searchContainer"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_margin="20dp"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/grey3"
            app:layout_constraintTop_toBottomOf="@+id/viewTop">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="20dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/tvFrom"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_from"
                        android:background="@null"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grey6"
                        android:maxLines="1"
                        android:inputType="text"
                        android:drawablePadding="10dp"
                        android:drawableTint="@color/edit_text_icon_tint"
                        android:drawableStart="@drawable/ic_plane_edit_text"
                        android:autofillHints="" />

                    <ImageView
                        android:id="@+id/btnFromClearText"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_clear"
                        android:layout_gravity="center|end"
                        android:visibility="invisible"
                        android:contentDescription="@string/image"/>

                </FrameLayout>

                <View
                    android:id="@+id/viewLine"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey5" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/tvTo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_to"
                        android:background="@null"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grey6"
                        android:maxLines="1"
                        android:inputType="text"
                        android:drawablePadding="10dp"
                        android:drawableTint="@color/edit_text_icon_tint"
                        android:drawableStart="@drawable/ic_search"
                        android:autofillHints="" />

                    <ImageView
                        android:id="@+id/btnToClearText"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_clear"
                        android:layout_gravity="center|end"
                        android:visibility="invisible"
                        android:contentDescription="@string/image"/>

                </FrameLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            tools:listitem="@layout/rv_search_item"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/searchContainer"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/grey3"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/rvButtons">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRecommendedPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/rv_recommended_place"/>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>